# NALI

./: .gitignore  CMakeLists.txt  README.md  build.sh  gdb.sh  log  nap_numa_zipfan0.99_read_test.txt  nap_numa_zipfan0.99_write_test.txt  nap_numa_zipfan0.9_read_test.txt  nvm_test.sh  recovery_test.sh  run.sh  total.sh
background_test/: nvm_test  nvm_test.cpp  test.sh
background_test/mlc_test/: parse_res.sh  test.txt  test1.sh  test_dram.sh
benchmark/: logging.h  main.cpp  multi_bench.cpp  nvdimm_counter.h  operation.h  utils.h  varvalue_alloc.h
include/: db_interface.h  logdb.h  new_cache.h  pl_allocator.h  thread_pool.h  tree.h
include/clht/: clht_lb_res.h
include/util/: allocator.h  logging.h  utils.h  xxhash.h
script/: get_index_cdf.sh  get_res.sh  kill.sh  multi_bench.sh  perf.sh
script/alexol_percore/: get_res.sh
script/bg_thread_scan/: get_res.sh
script/gc/update/0.1/: get_res.sh
script/nali_hash_shards/: get_res.sh
script/nap_alexol_cmp/: get_res.sh
script/nap_update_0.9/: get_res.sh
src/: nali.h  nali_alloc.h  nali_base.h  nali_cache.h  nali_concurrency.h  nali_entry.h  nali_fanout_tree.h  nali_kvlog.h  nali_nodes.h  piecewise_linear_model.h  rmi_model.h
src/clht/: clht_lb_res.cc
third/ALEX/: README.md
third/DPTree/: CMakeLists.txt  README.md  dptree_wrapper.cpp  dptree_wrapper.hpp
third/DPTree/include/: concur_dptree.hpp  util.h
third/DPTree/src/: util.cpp
third/DPTree/test/: concur_dptree_test.cxx  dptree_test.cxx
third/FAST_FAIR/: README.md  btree.h
third/alexol/: alex.h  alex_base.h  alex_nodes.h  util.h
third/dptree/: CMakeLists.txt  dptree_wrapper.cpp  dptree_wrapper.hpp
third/dptree/include/: art_idx.hpp  art_tree.hpp  bloom.hpp  btreeolc.hpp  concur_dptree.hpp  dptree.hpp  nodepref.h  util.h
third/dptree/misc/ARTOLC/: ARTOLC.hpp  Key.h  Tree.cpp  Tree.h
third/dptree/src/: util.cpp
third/fastfair/: CMakeLists.txt  README.md  con_fastfair.cc  con_fastfair.h
third/lbtree/: Makefile
third/lbtree/common/: lbtree.cc  lbtree.h  mempool.h  nodepref.h  nvm-common.h  tree.h
third/lbtree/lbtree-src/: lbtree_wrapper.cpp  lbtree_wrapper.hpp
third/nap/: CMakeLists.txt
third/nap/include/: NR.h  count_min_sketch.h  cow_alloctor.h  nap.h  nap_common.h  nap_wrapper.h  rw_lock.h  topology.h
third/nap/include/index/: NUMA_Config.h  cceh_NUMA.hpp  clevel_hash_NUMA.hpp  clht_NUMA.hpp  fast_fair.h  level_hash_NUMA.hpp  mock_index.h
third/nap/src/: nap.cpp
third/nap/src/index/: NUMA_Config.cpp
third/pactree/include/: common.h  pmem.h
third/pactree/src/: CMakeLists.txt  pactree.cpp  pactree_wrapper.cpp  pactree_wrapper.h
third/pactree/tools/: get-numa-config.sh
third/utree/: CMakeLists.txt  README.md  main.cpp  utree.cc  utree.h  utree_wrapper.cpp  utree_wrapper.h
third/viper/: viper.hpp
